--- a/_posts/2019-6-8-Aloha.md
+++ b/_posts/2019-6-8-Aloha.md
@@ -16,17 +16,17 @@ stickie: true
 >此时此刻是2019年高考结束的时间，正好有这样一个引子，然后沿着回忆顺藤摸瓜似乎比较容易，机智如我呀。
 
 ## 只记得那年的数学卷很难
-<font size=5>2011</font>年我参加高考，关于那次考试的记忆已经非常模糊了，印象里那年的数学卷很难，考完走出考场，目力所及的表情都是苦瓜状。
+2011年我参加高考，关于那次考试的记忆已经非常模糊了，印象里那年的数学卷很难，考完走出考场，目力所及的表情都是苦瓜状。
 
 可能是为了方便管理，全县所有的考生被分散在县城里的几个中学考场里考试，所以我们这些乡下的孩子不得不在考试期间也住校，那天回到学校，我和其他几个男生各怀心事地在校园里四处游荡，突然有人提议说教师宿舍楼通往天台的门没锁，于是大家便一拍即合跑去楼顶天台放风，我们在楼顶看着夕阳，对于考试，每个人都有一肚子的怨气想要发泄，还没来得及骂娘就被刚好从楼下经过的班主任一声断喝：“你们给我下来！”。他当时一定以为我们考完数学绝望到想跳楼，不过和我们朝夕相处了两年的他显然大大高估了我们对于考不好这件事的态度和考不好就跳楼这件事的决心。后来发生了什么早已忘记了，只是下楼后看到班主任摊坐在路边的样子，至今记忆犹新。我当时一定不会想到，在那场所谓改变一生的考试中，多年以后的我只记住了这样的一个场景。
 
-后来每次想起这一劫，我都会想到《笑傲江湖》中岳不群猜忌令狐冲偷学林家剑法的桥段，唉，岳将令抚养长大视如己出，却从来理解不了令不是能行出偷学师弟家传剑法那般不磊落之事的人，我相信不只是我会有如此感叹吧。不过这两件事着实没有什么可比性，完全是出自我自己无趣的意淫。
+后来每次想起这一劫，我都会想到《笑傲江湖》中岳不群猜忌令狐冲偷学林家剑法的桥段，“唉，岳将令抚养长大视如己出，却从来理解不了令不是能行出偷学师弟家传剑法那般不磊落之事的人。”记得自己当初读到这里的时候唏嘘不已。不过这两件事着实没有什么可比性，完全是出自我自己无趣的意淫。
 
 最后，我爱我的班主任李老师和高一的班主任赵老师。
 ## 我考上的到底是啥学校
-由于数学考得奇糟无比，糟糕到比我最悲观的估计还要低大概30分，好在其他科目都发挥正常而且英语比预计多考了10分，但最后的结果也只能算是差强人意，拿着这个分数去填志愿表无论如何也说不上容易，尤其对于刚考完试一脸懵逼的我来说更是如此，好在报志愿本身不需要考试，甚至还可以求助场外观众。家里人（主要是大哥跟二哥）根据目前他们所在的行业分别给我建议，大概分了两派——电力派和电子派，区别在于毕业了是去发电厂（大哥跟刘慈欣那种）或去IT公司（二哥那种），于是我更加懵逼地把两方的建议全填到了志愿表里，最后在两派的双向选择下，我被电子派截胡。高考之后的那个夏天是怎么过的？也完全想不起任何细节了，无非就是漫无目的地放空，没有压力的疯玩而已。
+由于数学考得奇糟无比，糟糕到比我最悲观的估计还要低大概30分，就算其他科目都发挥正常而且英语比预计多考了10分，最后的结果也只能算是差强人意。拿着这个分数去填志愿表无论如何也说不上容易，尤其对于刚考完试一脸懵逼的我来说更是如此，好在报志愿本身不需要考试，甚至还可以求助场外观众。家里人（主要是大哥跟二哥）根据目前他们所在的行业分别给我建议，大概分了两派——电力派和电子派，区别在于毕业了是去发电厂（大哥跟刘慈欣那种）或去IT公司（二哥那种），于是我更加懵逼地把两方的建议全填到了志愿表里，最后在两派的双向选择下，我被电子派截胡。高考之后的那个夏天是怎么过的？也完全想不起任何细节了，无非就是漫无目的地放空，没有压力的疯玩而已。
 
-不过我总是很难理解老家的一些所谓习俗，比如考上大学就要被亲戚朋友派红包，我觉得这种事毫无意义，至亲的亲人就不用说了，他们从不会以红包的方式给你零花钱，而那些似远似近的所谓亲朋就会比较尴尬，因为给红包的人不一定真的愿意给，收红包的人也不一定愿意收，这样你来我往地推辞几个回合之后，整个过程就会很容易演变成车祸现场。记得有一次在奶奶家的饭局上，再一次经历车祸现场后，大家开始吃饭聊天，一个亲戚突然问我：“你考上的是啥学校？”，我如实回答，他再问：“啥学校？”，我再答，在他第三次问出“啥”之后，我没有再回答他。后来的对话已经记不清了，只记得当时他当时脸上那复杂和难以言说的表情，似乎在告诉我这个他从来没听说过的学校配不上他的红包。后来也有某个长辈以非常复杂的态度将我的高考成绩放到其他所谓重点学校去比较，然后毫无根据地说这分数在某某学校也就是XXXX名的水平balabala……对于这些，我早已习以为常。前几年甚至因为无聊，我还盘点了一下，发现自己的高考分数在所有亲朋好友家的孩子中排在倒数第二！如果单论成绩，我是家族群里倒数第二个loser，这是多特么痛的领悟！没办法，身边的环境就是如此险恶，所谓“别人家的孩子”，远的在天边，近的都在我们家亲戚里。所以从小时候开始我妈教育我时的素材才能信手拈来。Anyway，虽然那个夏天只记住了这样的无聊事，但我从来没有因此而困扰，别人是否看低你，是他们的自由，当然也因为那时的自己还不够好。虽然到现在为止，我也从没觉得自己有足够好过，但是我也并不会因为不够好这件事本身而困扰。没办法，从不知什么时候的某个阶段开始，我在这方面的感受变得越来越迟钝，人也越来越惫懒。况且人生在世，活着目的从来都不是为了要去证明什么那么狭隘，不是么？
+不过我总是很难理解老家的一些所谓习俗，比如考上大学就要被亲戚朋友派红包，我觉得这种事毫无意义，至亲的亲人就不用说了，他们从不会以红包的方式给你零花钱，而那些似远似近的所谓亲朋就会比较尴尬，因为给红包的人不一定真的愿意给，收红包的人也不一定愿意收，这样你来我往地推辞几个回合之后，整个过程就会很容易演变成车祸现场。记得有一次在奶奶家的饭局上，再一次经历车祸现场后，大家开始吃饭聊天，一个亲戚突然问我：“你考上的是啥学校？”，我如实回答，他再问：“啥学校？”，我再答，在他第三次问出“啥”之后，我没有再回答他。后来的对话已经记不清了，只记得当时他当时脸上那复杂和难以言说的表情，似乎在告诉我这个他从来没听说过的学校配不上他的红包。后来也有某个长辈以非常复杂的态度将我的高考成绩放到其他所谓重点学校去比较，然后毫无根据地说这分数在某某学校也就是XXXX名的水平balabala……对于这些，我早已习以为常。前几年甚至因为无聊，我还盘点了一下，发现自己的高考分数在所有亲朋好友家的孩子中排在倒数第二！如果单论成绩，我是家族群里倒数第二个loser，这是多特么痛的领悟！没办法，身边的环境就是如此险恶，所谓“别人家的孩子”，远的在天边，近的都在我们家亲戚里。所以从小时候开始我妈教育我时的素材才能信手拈来。Anyway，虽然那个夏天只记住了这样的无聊事，但我从来没有因此而困扰，别人是否看低你，是他们的自由，当然也因为那时的自己还不够好。虽然到现在为止，我也从没觉得自己有足够好过，但是我也并不会因为不够好这件事本身而困扰。没办法。不知什么时候开始，我在这方面的感受变得越来越迟钝，人也越来越惫懒。况且人生在世，活着目的从来都不是为了要去证明什么那么狭隘，不是么？
 ## 从hello world开始
 上大学之后，整个人的状态依然是懵逼的，而且这种懵逼一直持续到大一结束，那时基本每天都是宿舍教室食堂的循环，不逃课也不听课，放假了不会在宿舍睡一整天也不会早早起床去干点什么，偶尔去图书馆但不会泡在图书馆，没有好好学习也没有完全不学习，总之那时的状态就像是生活没有了支撑一样，一副浑浑噩噩的样子。之前一直觉得自己从没体会过所谓“迷茫”的感觉，现在想想，那段时间的自己应该是真正的处在迷茫中而不自知。
 
@@ -42,7 +42,7 @@ stickie: true
 
 前几天在知乎上看到一句话，大概意思是人生的很多个重大事件都是在某个微风和煦的午后以你不自知的方式悄然决定的，我觉得这种不痛不痒的话特别扯，甚至不如心灵鸡汤和成功学来得实在，因为它不能给你当下和未来人生任何有意义的指引，又像作者用笔栓根鱼线在钓读者的代入感，十足地抖机灵。
 
-不过扯淡归扯淡，如果把它当作纪实文学来看的话，还是挺有道理的（好吧我承认自己在某种程度上也被代入了），因为事实就是我在某个云淡风轻的日子，在志愿表上潦草写下的那几个字，那时的每一笔都在某种程度上决定了自己的人生轨迹，后来，可能是另一个云淡风轻的日子，我又决定不再Coding而转行网络。我一直都会设想如果当初不这样的话会如何，比如自己当时去了电力院校会怎样呢，会不会现在已经在体制当差并在老家结婚生子买车买房考虑要二胎了呢，因为我身边就有这样活生生的模板。要是还在Coding呢，现在是不是在西二旗或五道口或望京挤地铁？但是好在这些都不能假设，对于一个人来说，没有体验过的生活方式也没资格去judge，唯一能判断自己对当初的决定是否后悔的标准是自己是不是喜欢现在所过的生活，如果再给自己一次机会去选择，会不会心平气和地说：“OK，yesterday once more”。
+不过扯淡归扯淡，如果把它当作纪实文学来看的话，还是挺有道理的（好吧我承认自己在某种程度上也被代入了），因为事实就是我在某个云淡风轻的日子，懵逼的自己在志愿表上潦草写下的那几个字，那时的每一笔都在某种程度上决定了自己的人生轨迹，后来，可能是另一个云淡风轻的日子，我又决定不再Coding而转行网络。后来我一直都会设想如果当初不这样的话会如何，自己当时去了电力院校会怎样呢，会不会现在已经在体制当差并在老家结婚生子买车买房考虑要二胎了呢，因为我身边就有这样活生生的模板。要是还在Coding呢，现在是不是在西二旗或五道口或望京挤地铁？但是好在这些都不能假设，对于一个人来说，没有体验过的生活方式也没资格去judge，唯一能判断自己对当初的决定是否后悔的标准是自己是不是喜欢现在所过的生活，如果再给自己一次机会去选择，会不会心平气和地说：“OK，yesterday once more”。
 
 我想自己的回答是肯定的。
 
