--- a/_posts/2019-6-8-Aloha.md
+++ b/_posts/2019-6-8-Aloha.md
@@ -32,7 +32,7 @@ stickie: true
 
 直到大二，我开始寻求改变，我告诉自己，虽然还不知道自己想要什么，但一定要做点什么。于是我开始接触本来应该在大三专业课才会学的微处理器，而这个节点是我所学专业的必经之路。那时整天拿着二哥送我的一套飞思卡尔板子研究，还没完全研究透，就发现有一个重庆市内的大学生单片机设计比赛，我拉着同学去报名，很顺利地，我们通过了初赛和复赛，后来用了三个月的时间完成了一个现在看来非常不成熟的参赛作品，那是一个无线记分系统。我们在一个下着雨的周末抱着它去参加了总决赛，评委们在我们的展示台前不置可否地看着我们演示作品功能，然后不置可否地离开。然后不出意外地，我们最终没能拿到半个奖，就像周杰伦歌里唱得一样。不过参加这种比赛就像嗑药一样，某种程度上会让人上瘾。后来或自己或合作的参加了一些比赛，也算用这种方式度过了一段本来应该很难熬的时间。现在想想当年我跟同伴抱着作品去上海参加比赛，因为同伴长得太像不法分子而在地铁里被警察盘查的经历，这体验也算是一生中独一无二了吧。
 
-大三找到了一个实验室打工，每天做着一些有的没的的事情，接的项目系统地跟了几个，后来也都以不了了之告终。只记得那时的自己对未来要干什么这件事依然没有概念。想来想去，那就学学除了芯片编程之外的其他编程吧，编程圈有一个不成文的规矩，所有语言的入门都要从在屏幕上打印出一个“hello world”开始，至少所有能称之为教程的书里是这么安排的，所以大三的那年，我在实验室里用不同的编译器，用不同的语言，认真遵循不同的语法规则在屏幕上打印出了N个相同的“hello world”。但是很不幸，我对所有的开发语言都是从hello world开始，也基本结束在hello world，我发现自己对每种语言的的语法都极为不适应，也不愿意去适应。现在想想，当年之所以没走无论是底层还是顶层Coding这条路，可能是因为自己内心真的排斥这些强规则性的东西。我现在也搞不懂这是为什么，可能跟自己的成长经历有关，从小到大我都在遵守各种规则，小心翼翼地守护各种规则，但是，从小到大我也在试探规则之内的可行性，询问规则之外的可能性。这些所谓规则可能是明确的，模糊的，约定俗成的，或者身边所有人都认为应该如此的……一路成长到现在，我深知自己从来都不是一个所谓根正苗红三好学生式的孩子，也不是一个在所有规则的底线处徘徊试探的孩子。我只是一个喜欢胡思乱想，并尝试把某些想法变成现实的孩子。
+大三找到了一个实验室打工，每天做着一些有的没的的事情，接的项目系统地跟了几个，后来也都以不了了之告终。只记得那时的自己对未来要干什么这件事依然没有概念。想来想去，那就学学除了芯片编程之外的其他编程吧，编程圈有一个不成文的规矩，所有语言的入门都要从在屏幕上打印出一个“hello world”开始，至少所有能称之为教程的书里是这么安排的，所以大三的那年，我在实验室里用不同的编译器，用不同的语言，认真遵循不同的语法规则在屏幕上打印出了N个相同的“hello world”。但是很不幸，我对所有的开发语言都是从hello world开始，也基本结束在hello world，我发现自己对每种语言的的语法都极为不适应，也不愿意去适应。现在想想，当年之所以没走无论是底层还是顶层Coding这条路，可能是因为自己内心真的排斥这些强规则性的东西。我现在也搞不懂这是为什么，可能跟自己的成长经历有关，从小到大我都在遵守各种规则，小心翼翼地守护各种规则，但是，从小到大我也在试探规则之内的可行性，询问规则之外的可能性。这些所谓规则可能是明确的，模糊的，约定俗成的，或者身边所有人都认为应该如此的……一路走到到现在，我深知自己从来都不是一个所谓根正苗红三好学生式的孩子，也不是一个在所有规则的底线处徘徊试探的孩子。我只是一个喜欢胡思乱想，并尝试把某些想法变成现实的孩子。
 
 嗯，重点是，我还是个孩子。
 ## Aloha
