--- a/_posts/2019-6-8-Aloha.md
+++ b/_posts/2019-6-8-Aloha.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Aloha
-category : 生活随笔 技术日志
-tags : [tech life]
+category : [生活随笔, 技术日志]
+tags : [tech, life]
 stickie: true
 ---
 
