--- a/_posts/2019-6-8-Aloha.md
+++ b/_posts/2019-6-8-Aloha.md
@@ -20,7 +20,7 @@ stickie: true
 
 可能是为了方便管理，全县所有的考生被分散在县城里的几个中学考场里考试，所以我们这些乡下的孩子不得不在考试期间也住校，那天回到学校，我和其他几个男生各怀心事地在校园里四处游荡，突然有人提议说教师宿舍楼通往天台的门没锁，于是大家便一拍即合跑去楼顶天台放风，我们在楼顶看着夕阳，对于考试，每个人都有一肚子的怨气想要发泄，还没来得及骂娘就被刚好从楼下经过的班主任一声断喝：“你们给我下来！”。他当时一定以为我们考完数学绝望到想跳楼，不过和我们朝夕相处了两年的他显然大大高估了我们对于考不好这件事的态度和考不好就跳楼这件事的决心。后来发生了什么早已忘记了，只是下楼后看到班主任摊坐在路边的样子，至今记忆犹新。我当时一定不会想到，在那场所谓改变一生的考试中，多年以后的我只记住了这样的一个场景。
 
-后来每次想起这一劫，我都会想到《笑傲江湖》中岳不群猜忌令狐冲偷学林家剑法的桥段，“唉，岳将令抚养长大视如己出，却从来理解不了令不是能行出偷学师弟家传剑法那般不磊落之事的人。”记得自己当初读到这里的时候唏嘘不已。不过这两件事着实没有什么可比性，完全是出自我自己无趣的意淫。
+后来每次想起这一劫，我都会想到《笑傲江湖》中岳不群猜忌令狐冲偷学林家剑法的桥段，唉，岳将令抚养长大视如己出，却从来理解不了令不是能行出偷学师弟家传剑法那般不磊落之事的人。我跟令狐冲的困惑在某种程度上应该是相同的。不过这两件事着实没有什么可比性，完全是出自我自己无趣的意淫。
 
 最后，我爱我的班主任李老师和高一的班主任赵老师。
 ## 我考上的到底是啥学校
@@ -36,7 +36,7 @@ stickie: true
 
 嗯，重点是，我还是个孩子。
 ## Aloha
-不管真的假的，上一回大学总是要考几个证书，初衷非常单纯：写简历上。但是和我本专业相关的证书很少，看了看隔壁计算机专业有什么可考的，诶？网络工程师好像还行，简单还贴近生活，就是它了。做出这个决定的时候，我应该还不会修改Windows系统的IP地址，关于如何得出网络简单&贴近生活这样的结论，答案只有当时的自己知道。然后就开始找资料学习，准备考试，一直到考试结束，整个过程都很顺利，而且我惊讶地发现过程中自己竟然没有感觉到无趣，这真的是前所未有的体验。从那时开始，似乎就已经决了以后要走的道路。后来考研、毕业、工作直到现在，我真的还走在这条道路上。
+不管真的假的，上一回大学总是要考几个证书，初衷非常单纯：写简历上。但是和我本专业相关的证书很少，看了看隔壁计算机专业有什么可考的，诶？网络工程师好像还行，简单还贴近生活，就是它了。做出这个决定的时候，我应该还不会修改Windows系统的IP地址，关于如何得出网络简单&贴近生活这样的结论，答案只有当时的自己知道。然后就开始找资料学习，准备考试，一直到考试结束，整个过程都很顺利，而且我惊讶地发现过程中自己竟然没有感觉到无趣，这真的是前所未有的体验。从那时开始，似乎就已经决定了以后要走的路。果然，后来考研、毕业、工作直到现在，我真的走在这条路上。
 
 “Aloha”是夏威夷群岛土著人的方言，大意是“你好”，我是怎么知道的呢？应该是准备考研的时候，有一天我看到一个外国人写的《计算机网络》在介绍关于二层的碰撞检测协议时引出的一个原始协议，名称就叫Aloha，1968年由夏威夷大学提出，现在早已被更高效的碰撞检测机制替代了，当时为了让夏威夷群岛实现无线通信，他们基于这个协议搭建了世界第一个二层无线局域网，过程中还有一些有意思的小故事，具体的描述早就忘记了，只是当时读到这里的时候觉得挺有意思，网络协议千千万，一个早已废弃的协议一般不会被人特别记住，估计像我这样无聊的人也不会多。
 
