--- a/_posts/2019-6-9-山丘.md
+++ b/_posts/2019-6-9-山丘.md
@@ -28,4 +28,6 @@ tags : [music]
 
 但我现在已经不会强迫自己去寻找答案了，对于不理解的事，也不会强迫自己非要写出点什么。
 
-对于为啥听不懂还要一遍遍听这样的困惑，或许再过五年，就能写出点什么了。
+对于为啥听不懂还要一遍遍听这样的困惑，先列出来。
+
+或许再过五年，就能写出点什么了。
