--- a/_posts/2019-9-17-尾声啦，夏天.md
+++ b/_posts/2019-9-17-尾声啦，夏天.md
@@ -1,46 +1,62 @@
 ---
 layout: post
-title: 关于地球公转的思考
+title: 尾声啦，夏天
 category : 生活随笔
 tags : [life]
 ---
 
->闲来无事，记录琐碎
+###
 
-地球又公转一周了。
+夏天要过去了，深圳还是很热，热到让我下了决心不会在这里常留。
 
-再次来到这，脑袋里持续地被这句话围绕着。
+昨天晚上睡得很好，好到今天早上没有例行在7点醒过来，但是被闹钟叫醒的感觉也不很舒服，不过像往常一样等着闹钟响起也不舒服。
 
-但是这次不能去这个岛的令一端了，关于火车头的海鲜，喜来登的沙滩和三亚河的风，也可以先留给以后。
+定了十一去海口的行程，虽然有一半的时间都在路上，但也挺好的。
 
-还是住在这间自行车租赁店兼驿站里，四周都是摩拳擦掌等着出发环岛的人，我这个到处搭讪的闲人被凸显得如此特殊。
+最近抽烟有点凶，希望过一阵子会好一点吧。
 
-毛病多的人需要沉寂也需要
+###
 
-这一年，有人对我说年轻人要向前看，有人说出身卑微必然会有局限，有人说在远处要多吃水果早睡觉……
-这一年，我对自己说很大程度上人生的意义，在于求知和体验，我说当独自一人能够感觉充实的时候，生活可能就是有意义的。我告诉自己给自己留后路的坏处就是，怕自己有一天自己会放弃脚下的路，左转掉头，我也终于知道了取悦别人容易，取悦自己费劲的事实。
+昨天周董发了新歌，不出意外地对此并无感觉，没听也没动力刻意找来听，em，据说省了三块钱。
 
-我怀着纪念头七一般的心情再回到这曾经的起点和终点，除了有一种时空倒错的感觉之外，还总会有点三炷香和倒瓶酒画个圈之类的冲动。其实去年离开之后，就有把这第一份工作完结之后刻意留下的tag再tag一下的想法，奈何琐事烦人，再次工作之后亦没有心境来整理，后来也就不了了之。所以这次来之前还挺害怕时间久了之后会把这些酝酿了一年的情绪慢慢淡化的，但好在吹了一下午海风之后不仅没有懵逼，反而灵感有如尿崩。。。
+但是我妈说昨天她去乡里的农商银行碰到张楠了，她在那里做柜员…我本来是想跟她多聊几句这件事的，后来却因为嘴碎和墨迹很快地把这个话题聊死了。。。
 
-去年，有两个人各怀心事地一起生活了一个夏天，然后又各怀心事地一起骑车环了个岛，尽管中途遭遇迷路撞车闹矛盾这些俗套剧情，但结局却并不励志。这件事本身并没有帮他们解决各自的问题，直到结束时俩人还是对于未来的生活一脸懵逼，甚至过程中同步发生的事情让人更加懵逼......
+还记得中学时她送我的那个信签，封皮上那个大大的周董肖像，现在看来却有些浮夸了。
 
-生活总是问题叠着问题。
+只是我妈小心翼翼地问我，我们最后没在一起是不是跟她有关系，我竟有些不知该如何回答。
 
-但问题总是会被解决的，就像那句鸡汤，所有的事情到最后一定会是好事，如果不好，那说明还没到最后。
+###
 
-作为凡人的他们当然还远没走到最后，人生布置给他们的作业也还远没有完成，但在未来的无限次重逢中，他们一定会无限次地聊起这件事，聊起“送你宝马良驹”这样只有彼此才能懂得的梗，到那时如果还能博得相互一笑，那就是他们用尽全部精力在2018年秋天的一段时间，在中国第二大岛屿完成这件事的最功利的意义。
+总觉得最近做的好多事情都特别无聊和幼稚，为了避免继续这样，我选择了不再做那些事情，但是这个选择本身似乎也是幼稚和无聊的。
 
-可怕的是他们也得知了在最大的岛屿中还有一日双塔这样的事。。。
+就像看电视时知道了吸烟不好，然后发誓再也不看电视了一样。
 
+现在的我好像特别容易沉溺于某一件事，这是自己一直以来尤其害怕的，和刻意想避免的。
 
+我不想让自己对某个人和事物有依赖感的原因，是因为于自己来说，无论如何最终都会以一个人的方式走在路上。在这条路上，可能没有网和微信，可能失去自认为最爱的事物和最爱的人，可能得到最痛苦的伤痛。
 
-虽然有点折腾，但还是挺喜欢这样无任务无状态的出行的，顺便刷了一下近几年连续不洗澡天数的记录，发现三天不洗天也塌不下来的样子。
+我终于知道，对于自己不能把握的东西，不寄希望便会没有失望。
 
-但还是完美地错（睡）过了需要火车上船的方式才能通过的琼州海峡。。。
+###
 
-我终于还是去问了问今年的租车价格，但理智的小人告诉我你特么不能这样，因为还有明天的火车和后天的飞机要赶。
-只剩下这句话在脑袋里赶也赶不走，
-地球又公转一周了。
+前几天晚上回住处，在十分钟的路上看着高矮胖瘦的各色行人，突然觉得好伤感。
 
-本来就是不想上台面的性格，也不想把自己往台面上推，就像美式加多少奶也成不了拿铁，固执又敏感的人不好改变
-当觉得无所事事的时候，学学习，跑跑步，读读书，应该是大概不会有问题的吧。
+晚上十点的城中村，加油站里那两个倚在油机旁闲聊的人，他们有聊一宿的话题吗？
+
+那个骑电瓶车带着一个小姑娘的中年女人，为什么在本来该睡觉的时候还带着孩子奔波呢，
+
+还有那个个子不高走在路上大声语音聊天的人，那个经常能遇到的蜷缩在漆黑的角落里看视频的快递员……
+
+我在某一刻突然悲天悯人起来，然后想起一首老歌的歌词“那个人在天桥下留下等待工作的电话号码，我想问他，有没有人打给他……”
+
+###
+
+周末了，像往常一样中午起床，叫外卖，洗衣服，然后继续睡觉。。。
+
+一觉醒来已经将近六点，发现窗外也已经没有潜意识里预设的那样光亮了，屋子里也已经黑到需要开灯的程度。
+
+之前有听到一种说法说不要独自一人在下午睡觉，因为醒来的孤独难以承受，我却对此并无感觉。现在想想可能是因为那时对于温度和流汗的烦躁超过了这种感受。
+
+现在，终于也有了这种在黑暗中独自醒来的孤独感，却是因为天气转凉的原因。
+
+是啊，这个季节的北回归线已经接收不到太多太阳的温度，也似乎是在提醒我，尾声啦，夏天。
